[package]
name = "trace_logging"
version = "0.1.0"
authors = ["Andreas Jonson <andjo403@users.noreply.github.com>"]
edition = "2018"

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["evntprov","minwindef","winerror","winnt","cguid"] }
widestring = "0.4.0"
