[package]
name = "trace_logging"
version = "0.1.0"
authors = ["Andreas Jonson <andjo403@users.noreply.github.com>"]
edition = "2018"

[dependencies]
proc-macro-hack = "0.5"
tracelogging_impl = { path = "../tracelogging_impl" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["evntprov","minwindef","winerror","winnt","cguid"] }
