[package]
name = "tracelogging"
version = "0.1.0"
authors = ["Andreas Jonson <andjo403@users.noreply.github.com>"]
edition = "2018"

[dependencies]
proc-macro-hack = "0.5"
tracelogging-impl = { path = "../tracelogging-impl" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["evntprov","winerror","winnt","cguid"] }
